kubernetes/apps/default/eramba-test/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: eramba-test
subsets:
- addresses:
  - ip: ${SECRET_ERAMBA_TEST_IP}
  ports:
  - name: http
    port: 8443
    protocol: TCP
  sessionAffinity: None
  type: ClusterIP
