kubernetes/apps/default/eramba-test/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eramba-test
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8443
