kubernetes/apps/default/eramba-test/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app eramba-test
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: external
  rules:
  - host: &host eramba-test.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: *app
            port:
              number: 443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
